git ignore updated

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@
 ## User settings
 xcuserdata/
 
+## General
 .DS_Store
+Pods/
 
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
